update link to code for likelihood geometry

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -46,7 +46,7 @@
   venue: Submitted
   pdf: https://arxiv.org/pdf/2312.08501.pdf
   arxiv: "2312.08501"
-  link: /assets/LCCode.m2
+  link: https://github.com/johndcobb/LikelihoodGeometry
   highlight: true
   description: Characteristics of the maximum likelihood estimation problems are reflected in the geometry of a variety called the likelihood correspondence. We construct the ideal of this variety for some popular examples of statistical models.
   tags:
