Add some prospective travel

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,17 @@
+- title: Applications of Commutative Algebra
+  venue: Fields Institute
+  where: Toronto, Canada
+  start: 2025-03-20
+  end: 2025-03-30
+- title: Apprenticeship Program in Commutative Algebra
+  venue: Fields Institute
+  where: Toronto, Canada
+  start: 2025-01-20
+  end: 2025-01-24
+- title: Joint meeting of the NZMS, AustMS and AMS
+  where: Auckland, New Zealand
+  start: 2024-12-09
+  end: 2024-12-13
 - title: GAeL XXXI
   where: Turin, Italy
   start: 2024-06-17
@@ -12,6 +26,15 @@
   where: San Francisco, CA
   start: 2024-05-04
   end: 2024-05-05
+- title: Recent Developments in Commutative Algebra
+  venue: MSRI
+  where: Berkeley, CA
+  start: 2024-04-15
+  end: 2024-04-19
+- title: Iowa State University
+  where: Ames, IA
+  start: 2024-04-25
+  end: 2024-04-26
 - title: NIST
   where: Boulder, CO
   start: 2024-03-25
