--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -9,6 +9,11 @@
   type: Conference
   date: 2024-05-04
   url: https://www.ams.org/meetings/sectional/2299_program.html
+- title: "Multigraded Stillman Conjecture"
+  location: Iowa State University Algebra and Geometry Seminar
+  city: Ames, IA
+  type: Seminar
+  date: 2024-04-25
 - title: "Missing Data and Likelihood Geometry"
   location: ACMD Seminar (NIST)
   city: Boulder, CO
