--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -16,6 +16,11 @@
   where: Turin, Italy
   start: 2024-06-17
   end: 2024-06-21
+- title: Macaulay2 Computational AG and String Theory Workshop
+  venue: University of Utah
+  where: Salt Lake City, UT
+  start: 2024-06-01
+  end: 2024-06-05
 - title: URiCA 
   venue: University of Nebraska-Lincoln
   where: Lincoln, NE
