--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -77,7 +77,7 @@
   end: 2023-10-06
 - title: SIAM Conference on Applied Algebraic Geometry
   venue: Eindhoven University of Technology
-  where: the Netherlands
+  where: Eindhoven, the Netherlands
   start: 2023-07-10
   end: 2023-07-14
 - title: GAeL XXX
@@ -112,7 +112,7 @@
   end: 2022-11-06
 - title: AMS Fall Western Sectional Meeting
   venue: University of Utah
-  where: Salt Lake City, Utah
+  where: Salt Lake City, UT
   start: 2022-10-22
   end: 2022-10-23
 - title: CCS
