Wait, baltimore is in maryland...

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -154,6 +154,6 @@
   start: 2021-10-30
   end: 2021-10-30
 - title: Joint Mathematical Meetings
-  where: Baltimore, MA
+  where: Baltimore, MD
   start: 2019-01-16
   end: 2019-01-19
