add early sectional meetings

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -153,7 +153,17 @@
   where: Minneapolis, MN
   start: 2021-10-30
   end: 2021-10-30
+- title: AMS Fall Central Sectional Meeting
+  venue: University of Wisconsin-Madison
+  where: Madison, WI
+  start: 2019-09-14
+  end: 2019-09-15
 - title: Joint Mathematical Meetings
   where: Baltimore, MD
   start: 2019-01-16
   end: 2019-01-19
+- title: AMS Spring Southeastern Sectional Meeting
+  venue: College of Charleston
+  where: Charleston, SC
+  start: 2017-03-10
+  end: 2017-03-12
