--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,8 +1,8 @@
 - title: Applications of Commutative Algebra
   venue: Fields Institute
   where: Toronto, Canada
-  start: 2025-03-20
-  end: 2025-03-30
+  start: 2025-05-20
+  end: 2025-05-30
 - title: Apprenticeship Program in Commutative Algebra
   venue: Fields Institute
   where: Toronto, Canada
@@ -75,7 +75,7 @@
   where: Chicago, IL
   start: 2023-10-02
   end: 2023-10-06
-- title: SIAM Conference on Applied Algebraic Geometry
+- title: SIAM Applied Algebraic Geometry
   venue: Eindhoven University of Technology
   where: Eindhoven, the Netherlands
   start: 2023-07-10
