--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,5 +1,8 @@
 - name: NSF Postdoctoral Research Fellowship ($190,000)
   years: 2024
+- name: NSF conference grant DMS-2408333 ($16,255)
+  years: 2024
+  short-description: Awarded to fund US participation in the 31st edition of GAeL.
 - name: NSF conference grant DMS-2309424 ($15,833)
   years: 2023
   short-description: Awarded to fund US participation in the 30th edition of GAeL. 
