--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -1,3 +1,10 @@
+- title: NZMS/AusMS/AMS Special Session on Computations and Applications of AG and CA 
+  type: Conference
+  dates: December 2024
+  location: Auckland, NZ
+  url: "https://ms-meet-2024.blogs.auckland.ac.nz"
+  panel: false
+  description: "The goal of this meeting is to bring together experts in algebraic ge- ometry and commutative algebra, with an emphasis on computations and applications. Below is a list of potential speakers representing a broad range of research; we have made an effort to include a large number of early career (postdocs or pre-tenure) mathematicians. The list is not exhaustive and we plan to recruit additional speakers."
 - title: GAeL XXXI
   type: Conference
   dates: June 2024
