Add Georgia AMS sectional

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,10 @@
 - title: "Multigraded Stillman Conjecture"
+  location: AMS Special Session on Topics in Commutative Algebra and Algebraic Geometry
+  city: Savannah, GA
+  type: Conference
+  date: 2024-10-05
+  url: "https://www.ams.org/meetings/sectional/2315_program.html"
+- title: "Multigraded Stillman Conjecture"
   location: URiCA (Upcoming researchers in Commutative Algebra) 2024
   city: Lincoln, NE
   type: Conference
