--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -19,6 +19,7 @@
   start: 2025-01-20
   end: 2025-01-24
 - title: Joint meeting of the NZMS, AustMS and AMS
+  venue: University of Auckland
   where: Auckland, New Zealand
   start: 2024-12-09
   end: 2024-12-13
