--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -36,6 +36,26 @@
 #    - Conference
 #    - Journal
 
+- id: MultigradedStillman
+  title: Multigraded Stillman's Conjecture
+  year: 2024
+  authors:
+    - John Cobb
+    - Nathaniel Gallup
+    - John Spoerl
+  venue: 
+  pdf:
+  arxiv:
+  highlight: true 
+  description: In 2000, Mike Stillman conjectured that the projective dimension of a homogeneous ideal in a standard graded polynomial ring can be bounded just in terms of the number and degrees of the generators. We resolve Stillman's conjecture for families of polynomial rings that are graded by any abelian group under mild conditions. Conversely, we show that these conditions are necessary for the existence of a Stillman bound. 
+  tags: 
+    - Syzygies
+    - Toric Varieties
+    - Logic
+  type:
+    - Preprint
+  
+  
 - id: LikelihoodGeometry
   title: Likelihood Correspondence of Statistical Models
   year: 2023
