No longer teaching...

--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,7 +1,7 @@
 - title: "MATH 217: Calculus with Algebra & Trig II"
   role: "Teaching Assistant"
   year: Spring 2024
-  type: Current
+  type: Past
   panel: true
   highlight: 1
   image: calculus1.jpg
