add panelist position

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,3 +1,7 @@
+- title: Panelist for Organizing Conferences Aimed at Graduate Students
+  location: Madison, WI
+  description: "Panelist on a discussion about organizing conferences held by the UW Madison math department."
+  years: Spring 2024
 - title: Mentor
   at: UW Madison Directed Reading Program 
   url: https://sites.google.com/site/uwmadisondrp/
