--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -87,7 +87,7 @@
   abstract: "The syzygies of projective curves are fairly well understood — for instance, an influential theorem of Gruson, Lazarsfeld, and Peskine gives optimal bounds on their regularity. There has been a flurry of activity in the past two decades centered around generalizing work on syzygies to the toric setting. I will discuss work that lifts machinery for understanding syzygies of projective curves to obtain a bound on the multigraded regularity of a curve in a product of projective spaces."
 - title: "Virtual Resolutions and Syzygies"
   location: GAeL XXIX
-  city: Coventry, UK
+  city: Orsay, France
   type: Poster
   date: 2022-05-23
   url: https://warwick.ac.uk/fac/sci/maths/research/events/2023/gael/
