--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -146,7 +146,7 @@
   end: 2022-07-28
 - title: GAel XXIX
   venue: Université Paris-Saclay
-  where: Paris, France
+  where: Orsay, France
   start: 2022-05-23
   end: 2022-05-27
 - title: Géometrie Algébrique en l'honneur de Claire Voisin
