--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -7,7 +7,7 @@
   image: calculus1.jpg
   url: "/teaching/217Spring2024"
   professor: Cassie Williams
-  location: University of Wisconsin-Madison
+  location: UW Madison
   description: This page organizes calculus I discussion sections 304 and 305 running in Spring 2024.
   roledescription: Hold weekly problem solving sessions and office hours.
 - title: "MATH 222: Calculus II"
@@ -16,7 +16,7 @@
   year: Fall 2023
   type: Past
   professor: Maurice Fabien
-  location: University of Wisconsin-Madison
+  location: UW Madison
   url: "/teaching/222Fall2023"
   image: calculus2.jpg
   description: This page organizes calculus II discussion sections 306 and 310 running in Fall 2023.
@@ -33,7 +33,7 @@
   role: Teaching Assistant
   professor: Soledad Benguria Andrews
   year: Fall 2022
-  location: University of Wisconsin-Madison
+  location: UW Madison
   url: "/teaching/234Fall2022"
   image: calculus3.jpg
   description: This page organizes calculus III discussion sections 369 and 370 running in Fall 2022.
@@ -44,7 +44,7 @@
   role: Teaching Assistant
   professor: Cassie Williams
   year: Spring 2023
-  location: University of Wisconsin-Madison
+  location: UW Madison
   url: "/teaching/234Spring2023"
   image: calculus3.jpg
   description: This page organizes calculus III discussion sections 343 and 345 running in Spring 2023.
@@ -56,7 +56,7 @@
   type: Past
   role: Teaching Assistant
   year: Fall 2020
-  location: University of Wisconsin-Madison
+  location: UW Madison
   url: "/teaching/221Fall2020"
   image: calculus1.jpg
   description: This page organizes calculus discussion sections 429 and 431 running in Fall 2020.
@@ -68,7 +68,7 @@
   type: Past
   role: Teaching Assistant
   year: Fall 2021
-  location: University of Wisconsin-Madison
+  location: UW Madison
   url: "/teaching/221Fall2021"
   image: calculus1.jpg
   description: This page organizes calculus discussion sections running in Fall 2021.
