--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -36,6 +36,24 @@
 #    - Conference
 #    - Journal
 
+- id: GradedUltraproducts
+  title: Ultraproducts of Graded Algebras
+  year: 2024
+  authors:
+    - John Cobb
+    - Nathaniel Gallup
+    - John Spoerl
+  venue:
+  pdf:
+  arxiv:
+  highlight: true 
+  description: A common argument for establishing bounds within commutative algebra is the construction of a ``limiting polynomial ring'' that allows one to trade asymptotic behavior over many polynomial rings for exact behavior in the limit ring. We define a degree bounded ultraproduct that packages this argument up and establish several strong properties about it using its unique position within logic. We give numerous out-of-the-box algebraic tools to use on such rings.
+  tags:
+    - Logic
+    - Commutative Algebra
+  type:
+    - Preprint
+
 - id: MultigradedStillman
   title: Multigraded Stillman's Conjecture
   year: 2024
