Change from preprint to "In Progress"

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -52,7 +52,7 @@
     - Logic
     - Commutative Algebra
   type:
-    - Preprint
+    - In Progress
 
 - id: MultigradedStillman
   title: Multigraded Stillman's Conjecture
@@ -71,7 +71,7 @@
     - Toric Varieties
     - Commutative Algebra
   type:
-    - Preprint
+    - In Progress
   
   
 - id: LikelihoodGeometry
