Add Nate's site

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -31,3 +31,6 @@ Matthew Faust:
 
 Daniel Erman:
   url: "https://math.hawaii.edu/~erman"
+
+Nathaniel Gallup:
+  url: "https://sites.google.com/view/nathanielgallup/home"
