Put in talk at UW Madison

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -16,6 +16,12 @@
   date: 2024-05-04
   url: https://www.ams.org/meetings/sectional/2299_program.html
 - title: "Multigraded Stillman Conjecture"
+  location: UW Madison Algebra and Algebraic Geometry Seminar
+  city: Madison, WI
+  type: Seminar
+  date: 2024-05-02
+  url: "https://wiki.math.wisc.edu/index.php/Algebra_and_Algebraic_Geometry_Seminar_Spring_2024"
+- title: "Multigraded Stillman Conjecture"
   location: Iowa State University Algebra and Geometry Seminar
   city: Ames, IA
   type: Seminar
