give daniel a link

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   degree: ph.d. mathematics
   location: Madison, WI
   description: 
-  - "Advisors: Daniel Erman, [Michael Kemeny](https://people.math.wisc.edu/~kemeny/homepage.html)."
+  - "Advisors: [Daniel Erman](https://math.hawaii.edu/~erman/), [Michael Kemeny](https://people.math.wisc.edu/~kemeny/homepage.html)."
 - university: Honors College of Charleston
   years: 2015-2019
   degree: b.s. mathematics, b.a. chemistry, minor data science
