update email address

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: John Cobb
-email: jcobb2@math.wisc.edu
+email: jdcobb3@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   NSF postdoctoral fellow in the Mathematics Department at Auburn University. I am interested in algebraic geometry, commutative algebra, and their applications to data science. PhD from University of Wisconsin-Madison.
 baseurl: "" # the subpath of your site, e.g. /blog
