--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- message: "I started my NSF postdoc at Auburn."
+  date: 2024-07-18
 - message: "I graduated with a PhD in Mathematics from UW Madison."
   date: 2024-05-10
 - message: "I've passed my specialty exam."
