Add new people onto yml

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -34,3 +34,18 @@ Daniel Erman:
 
 Nathaniel Gallup:
   url: "https://sites.google.com/view/nathanielgallup/home"
+
+Hal Schenck:
+  url: "http://webhome.auburn.edu/~hks0015/"
+
+Jane Coons: 
+  url: "https://sites.google.com/view/jane-ivy-coons"
+
+Ximena Fernandez:
+  url: "https://ximenafernandez.github.io"
+
+Mike Stillman:
+  url: "https://pi.math.cornell.edu/~mike/"
+
+Heather A. Harrington:
+  url: "https://people.maths.ox.ac.uk/harrington/"
