georgia tech talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,9 @@
 - title: "Multigraded Stillman Conjecture"
+  location: Georgia Tech Algebra Seminar
+  city: Atlanta, GA
+  type: Seminar
+  date: 2024-11-04
+- title: "Multigraded Stillman Conjecture"
   location: AMS Special Session on Topics in Commutative Algebra and Algebraic Geometry
   city: Savannah, GA
   type: Conference
