--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -23,6 +23,10 @@
   where: Auckland, New Zealand
   start: 2024-12-09
   end: 2024-12-13
+- title: Georgia Tech
+  where: Atlanta, GA
+  start: 2024-11-03
+  end: 2024-11-05
 - title: AMS Fall Southeastern Sectional Meeting 
   venue: Georgia Southern University
   where: Savannah, GA
