--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,4 @@
-- message: "I started my NSF postdoc at Auburn."
+- message: "I started a NSF postdoc at Auburn."
   date: 2024-07-18
 - message: "I graduated with a PhD in Mathematics from UW Madison."
   date: 2024-05-10
