--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -1,3 +1,9 @@
+- title: MAAG 2025
+  type: Conference
+  dates: April 2025
+  location: Auburn, AL
+  image: MAAG.png
+  description: The Meeting on Applied Algebraic Geometry is a regional gathering which attracts participants primarily from the South-East of the United States. 
 - title: NZMS/AusMS/AMS Special Session on Computations and Applications of AG and CA 
   type: Conference
   dates: December 2024
