SIAM TX-LA talk

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -27,6 +27,11 @@
   where: Atlanta, GA
   start: 2024-11-03
   end: 2024-11-05
+- title: SIAM Conference Texas-Louisiana Section
+  venue: Baylor University
+  where: Waco, TX
+  start: 2024-10-11
+  end: 2024-10-13
 - title: AMS Fall Southeastern Sectional Meeting 
   venue: Georgia Southern University
   where: Savannah, GA
