--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -3,6 +3,11 @@
   city: Atlanta, GA
   type: Seminar
   date: 2024-11-04
+- title: "Likelihood Correspondence of Statistical Models"
+  location: Baylor University
+  city: Waco, TX
+  type: Conference
+  date: 2024-10-12
 - title: "Multigraded Stillman Conjecture"
   location: AMS Special Session on Topics in Commutative Algebra and Algebraic Geometry
   city: Savannah, GA
