--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,4 +1,4 @@
-- name: NSF Postdoctoral Research Fellowship ($190,000)
+- name: NSF Postdoctoral Research Fellowship DMS-2402199 ($190,000)
   years: 2024
 - name: NSF conference grant DMS-2408333 ($16,255)
   years: 2024
