small phrasing change

--- a/_data/employment.yml
+++ b/_data/employment.yml
@@ -3,4 +3,4 @@
   position: nsf postdoctoral research fellow
   location: Auburn, AL
   description: 
-  - "Mentor: [Hal Schenck](http://webhome.auburn.edu/~hks0015/)."
+  - "Sponsor: [Hal Schenck](http://webhome.auburn.edu/~hks0015/)."
