savannah ams section canceled

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -9,8 +9,8 @@
   type: Conference
   date: 2024-10-12
 - title: "Multigraded Stillman Conjecture"
-  location: AMS Special Session on Topics in Commutative Algebra and Algebraic Geometry
-  city: Savannah, GA
+  location: AMS Special Session on Topics in Commutative Algebra and Algebraic Geometry (cancelled)
+  city: Savannah, GA 
   type: Conference
   date: 2024-10-05
   url: "https://www.ams.org/meetings/sectional/2315_program.html"
