--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -1,16 +1,17 @@
 - title: MAAG 2025
   type: Conference
-  dates: April 2025
+  dates: Apr 2025
   location: Auburn, AL
   image: MAAG.png
   description: The Meeting on Applied Algebraic Geometry is a regional gathering which attracts participants primarily from the South-East of the United States. 
 - title: NZMS/AusMS/AMS Special Session on Computations and Applications of AG and CA 
+  shorttitle: AG-CA Applications NZ 2024
   type: Conference
   dates: December 2024
   location: Auckland, NZ
-  url: "https://ms-meet-2024.blogs.auckland.ac.nz"
-  panel: false
-  description: "The goal of this meeting is to bring together experts in algebraic ge- ometry and commutative algebra, with an emphasis on computations and applications. Below is a list of potential speakers representing a broad range of research; we have made an effort to include a large number of early career (postdocs or pre-tenure) mathematicians. The list is not exhaustive and we plan to recruit additional speakers."
+  url: "https://sites.google.com/view/ag-ca-applications-nz-2024/home"
+  image: auckland.jpg
+  description: "The goal of this meeting is to bring together experts in algebraic geometry and commutative algebra, with an emphasis on computations and applications."
 - title: GAeL XXXI
   type: Conference
   dates: June 2024
@@ -57,6 +58,7 @@
   description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project."
   highlight: 3
 - title: UW Madison Graduate Algebraic Geometry Seminar
+  shorttitle: UW Madison GAGS
   location: Madison, WI
   dates: Fall 2021 - Spring 2024
   type: Seminar
