--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -28,6 +28,17 @@
   location: Madison, WI
   roledescription: Meet with students weekly one on one to help with college level math courses.
 - title: "MATH 234: Calculus III"
+  panel: true
+  type: Past
+  role: Teaching Assistant
+  professor: Cassie Williams
+  year: Spring 2023
+  location: UW Madison
+  url: "/teaching/234Spring2023"
+  image: calculus3.jpg
+  description: This page organizes calculus III discussion sections 343 and 345 running in Spring 2023.
+  roledescription: Hold weekly problem solving sessions and office hours.
+- title: "MATH 234: Calculus III"
   panel: false
   type: Past
   role: Teaching Assistant
@@ -38,16 +49,17 @@
   image: calculus3.jpg
   description: This page organizes calculus III discussion sections 369 and 370 running in Fall 2022.
   roledescription: Hold weekly problem solving sessions and office hours.
-- title: "MATH 234: Calculus III"
+- title: "MATH 221: Calculus I"
   panel: true
+  sections: 341, 344
+  professor: Alex Waldron
   type: Past
   role: Teaching Assistant
-  professor: Cassie Williams
-  year: Spring 2023
+  year: Fall 2021
   location: UW Madison
-  url: "/teaching/234Spring2023"
-  image: calculus3.jpg
-  description: This page organizes calculus III discussion sections 343 and 345 running in Spring 2023.
+  url: "/teaching/221Fall2021"
+  image: calculus1.jpg
+  description: This page organizes calculus discussion sections running in Fall 2021.
   roledescription: Hold weekly problem solving sessions and office hours.
 - title: "MATH 221: Calculus I"
   panel: true
@@ -61,24 +73,21 @@
   image: calculus1.jpg
   description: This page organizes calculus discussion sections 429 and 431 running in Fall 2020.
   roledescription: Hold weekly problem solving sessions.
-- title: "MATH 221: Calculus I"
-  panel: true
-  sections: 341, 344
-  professor: Alex Waldron
-  type: Past
-  role: Teaching Assistant
-  year: Fall 2021
-  location: UW Madison
-  url: "/teaching/221Fall2021"
-  image: calculus1.jpg
-  description: This page organizes calculus discussion sections running in Fall 2021.
-  roledescription: Hold weekly problem solving sessions and office hours.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
   panel: true
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
-  year: Fall 2017
+  year: Spring 2019
+  location: College of Charleston
+  roledescription: Presented new content and held problem sessions.
+  description: This course is aimed at students preparing for a course in physical chemistry. It combines topics from Calculus I-III, linear algebra, and group theory.
+- title: "MATH 229: Vector Calculus with Chemical Applications"
+  panel: true
+  image: 6-armyresearch.jpg
+  type: Past
+  role: Teaching Assistant
+  year: Fall 2018
   location: College of Charleston
   roledescription: Presented new content and held problem sessions.
 - title: "MATH 229: Vector Calculus with Chemical Applications"
@@ -94,15 +103,6 @@
   image: 6-armyresearch.jpg
   type: Past
   role: Teaching Assistant
-  year: Fall 2018
+  year: Fall 2017
   location: College of Charleston
   roledescription: Presented new content and held problem sessions.
-- title: "MATH 229: Vector Calculus with Chemical Applications"
-  panel: true
-  image: 6-armyresearch.jpg
-  type: Past
-  role: Teaching Assistant
-  year: Spring 2019
-  location: College of Charleston
-  roledescription: Presented new content and held problem sessions.
-  description: This course is aimed at students preparing for a course in physical chemistry. It combines topics from Calculus I-III, linear algebra, and group theory to explain things like symmetries in molecules and crystal structures.
