--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -47,7 +47,7 @@
 - name: Outstanding Student in Computational Chemistry
   years: 2019
   sponsor: American Chemical Society
-  description: The local ACS chapter of the chemistry department of the College of Charleston chooses one graduating senio
+  description: The local ACS chapter of the chemistry department of the College of Charleston chooses one graduating senior.
   short-description: To one graduating senior in the Chemistry Department.
 - name: Alternate Candidate 
   years: 2019
