add conference website

--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -9,7 +9,7 @@
   type: Conference
   dates: Dec 2024
   location: Auckland, NZ
-  url: "https://sites.google.com/view/ag-ca-applications-nz-2024/home"
+  url: "https://johndcobb.github.io/organizing/appliedAGinNZ2024/"
   image: auckland.jpg
   description: "The goal of this meeting is to bring together experts in algebraic geometry and commutative algebra, with an emphasis on computations and applications."
 - title: GAeL XXXI
