add MAAG travel

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -13,6 +13,11 @@
   where: Toronto, Canada
   start: 2025-05-20
   end: 2025-05-30
+- title: Meeting on Applied Algebraic Geometry 2025
+  venue: Auburn University
+  where: Auburn, AL
+  start: 2025-04-12
+  end: 2025-04-13
 - title: Apprenticeship Program in Commutative Algebra
   venue: Fields Institute
   where: Toronto, Canada
