add auburn talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,9 @@
 - title: "Multigraded Stillman Conjecture"
+  location: Auburn Algebra Seminar
+  city: Auburn, AL
+  type: Seminar
+  date: 2024-11-19
+- title: "Multigraded Stillman Conjecture"
   location: Georgia Tech Algebra Seminar
   city: Atlanta, GA
   type: Seminar
