rename auburn talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,4 @@
-- title: "Multigraded Stillman Conjecture"
+- title: "Multigraded Syzygies"
   location: Auburn Algebra Seminar
   city: Auburn, AL
   type: Seminar
