--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -47,6 +47,7 @@
   pdf: https://arxiv.org/pdf/2411.11165
   arxiv: "2411.11165"
   description: A Macaulay2 package for computing the likelihood correspondence of statistical models.
+  link: https://github.com/johndcobb/LikelihoodGeometry
   tags:
     - Macaulay2
     - Toric Varieties
