add Clemson Talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,8 @@
+- title: "Likelihood Correspondence of Statistical Models"
+  location: AMS Spring Southeastern Sectional Meeting
+  city: Clemson, SC
+  type: Conference
+  date: 2025-03-08
 - title: "Multigraded Syzygies"
   location: Auburn Algebra Seminar
   city: Auburn, AL
