--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -18,6 +18,11 @@
   where: Auburn, AL
   start: 2025-04-12
   end: 2025-04-13
+- title: AMS Spring Southeastern Sectional Meeting
+  venue: Clemson University
+  where: Clemson, SC
+  start: 2025-03-08
+  end: 2025-03-09
 - title: Joint meeting of the NZMS, AustMS and AMS
   venue: University of Auckland
   where: Auckland, New Zealand
