--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,3 +1,6 @@
+- name: NSF conference grant DMS-2504328 ($20,767)
+  years: 2025
+  short-description: Awarded to fund MAAG 2025 in Auburn.
 - name: NSF Postdoctoral Research Fellowship DMS-2402199 ($190,000)
   years: 2024
 - name: NSF conference grant DMS-2408333 ($16,255)
