--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,4 @@
-- title: "Likelihood Correspondence of Statistical Models"
+- title: "Multigraded regularity of curves"
   location: AMS Spring Southeastern Sectional Meeting
   city: Clemson, SC
   type: Conference
