Change fields institute visit dates

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -8,11 +8,11 @@
   where: Madison, WI
   start: 2025-06-30
   end: 2025-07-04
-- title: Applications of Commutative Algebra
+- title: Program Visitor
   venue: Fields Institute
   where: Toronto, Canada
-  start: 2025-05-20
-  end: 2025-05-30
+  start: 2025-05-12
+  end: 2025-05-23
 - title: Meeting on Applied Algebraic Geometry 2025
   venue: Auburn University
   where: Auburn, AL
