--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -13,6 +13,11 @@
   where: Toronto, Canada
   start: 2025-05-12
   end: 2025-05-23
+- title: Macaulay2 Workshop
+  venue: Tulane University
+  where: New Orleans, LA
+  start: 2025-04-14
+  end: 2025-04-18
 - title: Meeting on Applied Algebraic Geometry 2025
   venue: Auburn University
   where: Auburn, AL
