add VHDL and Rust

--- a/_data/programming.yml
+++ b/_data/programming.yml
@@ -3,4 +3,4 @@
 - level: Familiar
   list: Java, MySQL, PyTorch, pandas, numpy
 - level: Beginner
-  list: Scikit-learn, MATLAB, Mathematica
+  list: Scikit-learn, MATLAB, Mathematica, VDHL/Verilog, Rust
