--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -76,7 +76,7 @@
 
 - id: MultigradedStillman
   title: Semigroup Graded Stillman's Conjecture
-  year: 2024
+  year: 2025
   authors:
     - John Cobb
     - Nathaniel Gallup
@@ -84,6 +84,8 @@
   venue: Journal of Algebra
   venue_tags:
     - J. Algebra
+  doi: 10.1016/j.jalgebra.2025.02.016
+  short_doi: 10/n9nt
   venue_url: https://www.sciencedirect.com/journal/journal-of-algebra
   pdf: https://arxiv.org/pdf/2406.09593
   arxiv: "2406.09593"
