--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,13 +1,8 @@
-- title: SIAM Applied Algebraic Geometry
-  venue: University of Wisconsin-Madison
-  where: Madison, WI
-  start: 2025-07-07
-  end: 2025-07-11
-- title: Macaulay2 Workshop
-  venue: University of Wisconsin-Madison
-  where: Madison, WI
-  start: 2025-06-30
-  end: 2025-07-04
+- title: 2025 AG Summer Research Institute Bootcamp
+  venue: Colorado State University
+  where: Fort Collins, CO
+  start: 2025-07-08
+  end: 2025-07-12
 - title: Program Visitor
   venue: Fields Institute
   where: Toronto, Canada
