--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,3 +1,7 @@
+- title: Macaulay2 Internals
+  location: online
+  description: "Meet with Macaulay2 dev team to discuss the internals of the software, and its implementation into VS Code."
+  years: Since Fall 2024
 - title: Panelist for Organizing Conferences Aimed at Graduate Students
   location: Madison, WI
   description: "Panelist on a discussion about organizing conferences held by the UW Madison math department."
