Add travel details for Regularity in algebra, combinatorics, and geometry event

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,8 @@
+- title: Regularity in algebra, combinatorics, and geometry
+  venue: Banff International Research Station
+  where: Banff, Canada
+  start: 2026-04-19
+  end: 2026-04-24
 - title: 2025 AG Summer Research Institute Bootcamp
   venue: Colorado State University
   where: Fort Collins, CO
