--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,5 +1,5 @@
 - title: Macaulay2 Internals
-  location: online
+  location: Online
   description: "Meet with Macaulay2 dev team to discuss the internals of the software, and its implementation into VS Code."
   years: Since Fall 2024
 - title: Panelist for Organizing Conferences Aimed at Graduate Students
