Add fields talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,9 @@
 - title: "Multigraded regularity of curves"
+  location: Fields Institute Seminar
+  city: Toronto, Canada
+  type: Seminar
+  date: 2025-05-13
+- title: "Multigraded regularity of curves"
   location: AMS Spring Southeastern Sectional Meeting
   city: Clemson, SC
   type: Conference
