update title for fields talk

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,4 @@
-- title: "Multigraded regularity of curves"
+- title: "Multigraded Syzygies"
   location: Fields Institute Seminar
   city: Toronto, Canada
   type: Seminar
