add AIM workshop, adjust SRIB dates

--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -3,11 +3,16 @@
   where: Banff, Canada
   start: 2026-04-19
   end: 2026-04-24
+- title: Homological Mirror Symmetry and Multigraded Commutative Algebra Workshop
+  venue: American Institute of Mathematics
+  where: Pasadena, CA
+  start: 2025-08-18
+  end: 2025-08-22
 - title: 2025 AG Summer Research Institute Bootcamp
   venue: Colorado State University
   where: Fort Collins, CO
   start: 2025-07-08
-  end: 2025-07-12
+  end: 2025-07-18
 - title: Program Visitor
   venue: Fields Institute
   where: Toronto, Canada
