add seminar for consistency

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -99,7 +99,7 @@
   url: https://sites.google.com/view/asu-algebra-days/home
   abstract: "The syzygies of projective curves are fairly well understood — for instance, an influential theorem of Gruson, Lazarsfeld, and Peskine gives optimal bounds on their regularity. There has been a flurry of activity in the past two decades centered around generalizing work on syzygies to the toric setting. I will discuss work that lifts machinery for understanding syzygies of projective curves to obtain a bound on the multigraded regularity of a curve in a product of projective spaces."
 - title: "Likelihood Correspondence of Statistical Models"
-  location: University of Hawaii-Manoa
+  location: University of Hawaii-Manoa Seminar
   city: Manoa, HI
   type: Seminar
   date: 2023-10-19
