add AMS sectional

--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -1,3 +1,10 @@
+- title: AMS Special Session on Moduli and Syzygies of Algebraic Curves
+  shorttitle: Moduli and Syzygies AMS 2025
+  type: Conference
+  dates: May 2026
+  location: Boston, MA
+  description: "This special session will focus on the moduli of algebraic curves and their syzygies, bringing together experts in the field."
+  panel: false
 - title: MAAG 2025
   type: Conference
   dates: Apr 2025
