--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,3 +1,8 @@
+- title: AMS Spring Eastern Sectional Meeting
+  venue: Boston College
+  where: Boston, MA
+  start: 2026-03-28
+  end: 2026-03-29
 - title: Regularity in algebra, combinatorics, and geometry
   venue: Banff International Research Station
   where: Banff, Canada
