--- a/_data/service.yml
+++ b/_data/service.yml
@@ -1,6 +1,6 @@
 - title: Macaulay2 Internals
   location: Online
-  description: "Meet with Macaulay2 dev team to discuss the internals of the software, and its implementation into VS Code."
+  description: "Meet with Macaulay2 dev team to discuss the internals of the software, and the implementation of new features. In particular, I am helping develop the vscode interface."
   years: Since Fall 2024
 - title: Panelist for Organizing Conferences Aimed at Graduate Students
   location: Madison, WI
