--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and Deploy
 
 on:
   push:
@@ -6,17 +6,40 @@ on:
   pull_request:
     branches: [ master ]
 
+# Grant the workflow permission to publish to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      site-path: _site
     steps:
-     - uses: actions/checkout@v4
-     - uses: ruby/setup-ruby@v1
-       with:
-         ruby-version: '3'
-     - name: Update Gem
-       run: gem update --system
-     - name: Install Gems
-       run: bundle install
-     - name: Build Jekyll
-       run: bundle exec jekyll build
+      - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3'
+      - name: Update Gem
+        run: gem update --system
+      - name: Install Gems
+        run: bundle install --jobs 4 --retry 3
+      - name: Build Jekyll
+        run: bundle exec jekyll build
+      - name: Upload Pages Artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: _site
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
