--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,25 +15,22 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      site-path: _site
     steps:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2'
-      - name: Update Gem
-        run: gem update --system
-      - name: Install Gems
-        run: bundle install --jobs 4 --retry 3
+          bundler-cache: true
       - name: Build Jekyll
         run: bundle exec jekyll build
       - name: Upload Pages Artifact
+        if: github.event_name == 'push'
         uses: actions/upload-pages-artifact@v3
         with:
           path: _site
 
   deploy:
+    if: github.event_name == 'push'
     needs: build
     runs-on: ubuntu-latest
     environment:
